--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,6 +10,7 @@ canvas{
 }
 
 #hall{
+    text-align: center;
     padding: 7px;
       background-image: linear-gradient(to right, indigo,violet); 
     border-radius: 20px 20px 20px 20px;
