ranking para ahorcado

--- a/css/Estilos_juegos.css
+++ b/css/Estilos_juegos.css
@@ -12,6 +12,10 @@ header div {
     box-shadow: 7px 7px 15px 1px rgba(0, 0, 0, 0.75);
 }
 
+header div:hover{
+  filter:saturate(10);
+}
+
 header h1 {
     text-align: center;
 
